// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SlideControls component doesn't apply the full size class, when vertical 1`] = `
<div>
  <div
    class="SlideControls-root-181 SlideControls-vertical-183"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-208 iconButton IconButton-medium-214 IconButton-text-210"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-187"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="SlideControls-middleContainer-186"
    >
      <span
        class="SlideControls-slidingSlot-185"
      >
        <span
          class="SlideControls-numbers-188"
        >
          <span
            class="SlideControls-number-193 SlideControls-active-192"
          >
            01
          </span>
        </span>
      </span>
      <span
        class="SlideControls-total-191"
      >
        05
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-208 iconButton IconButton-medium-214 IconButton-text-210"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-187"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`SlideControls component doesn't call useless state change on animationEnd 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`SlideControls component getDirection execute correctly if total === 2 1`] = `
<div>
  <div
    class="SlideControls-root-541"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-568 iconButton IconButton-medium-574 IconButton-text-570"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-547"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="SlideControls-middleContainer-546"
    >
      <span
        class="SlideControls-slidingSlot-545"
      >
        <span
          class="SlideControls-numbers-548 SlideControls-up-549"
        >
          <span
            class="SlideControls-number-553"
          >
            01
          </span>
          <span
            class="SlideControls-number-553 SlideControls-active-552"
          >
            02
          </span>
        </span>
      </span>
      <span
        class="SlideControls-total-551"
      >
        02
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-568 iconButton IconButton-medium-574 IconButton-text-570"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-547"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`SlideControls component moves backward by one number 1`] = `
<div>
  <div
    class="SlideControls-root-469"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-496 iconButton IconButton-medium-502 IconButton-text-498"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-475"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="SlideControls-middleContainer-474"
    >
      <span
        class="SlideControls-slidingSlot-473"
      >
        <span
          class="SlideControls-numbers-476"
        >
          <span
            class="SlideControls-number-481 SlideControls-active-480"
          >
            01
          </span>
        </span>
      </span>
      <span
        class="SlideControls-total-479"
      >
        05
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-496 iconButton IconButton-medium-502 IconButton-text-498"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-475"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`SlideControls component moves forward by one number 1`] = `
<div>
  <div
    class="SlideControls-root-433"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-460 iconButton IconButton-medium-466 IconButton-text-462"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-439"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="SlideControls-middleContainer-438"
    >
      <span
        class="SlideControls-slidingSlot-437"
      >
        <span
          class="SlideControls-numbers-440"
        >
          <span
            class="SlideControls-number-445 SlideControls-active-444"
          >
            02
          </span>
        </span>
      </span>
      <span
        class="SlideControls-total-443"
      >
        05
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-460 iconButton IconButton-medium-466 IconButton-text-462"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-439"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`SlideControls component moves from first to last number 1`] = `
<div>
  <div
    class="SlideControls-root-577"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-604 iconButton IconButton-medium-610 IconButton-text-606"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-583"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="SlideControls-middleContainer-582"
    >
      <span
        class="SlideControls-slidingSlot-581"
      >
        <span
          class="SlideControls-numbers-584"
        >
          <span
            class="SlideControls-number-589 SlideControls-active-588"
          >
            05
          </span>
        </span>
      </span>
      <span
        class="SlideControls-total-587"
      >
        05
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-604 iconButton IconButton-medium-610 IconButton-text-606"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-583"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`SlideControls component moves from last to first number 1`] = `
<div>
  <div
    class="SlideControls-root-505"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-532 iconButton IconButton-medium-538 IconButton-text-534"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-511"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="SlideControls-middleContainer-510"
    >
      <span
        class="SlideControls-slidingSlot-509"
      >
        <span
          class="SlideControls-numbers-512"
        >
          <span
            class="SlideControls-number-517 SlideControls-active-516"
          >
            01
          </span>
        </span>
      </span>
      <span
        class="SlideControls-total-515"
      >
        05
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-532 iconButton IconButton-medium-538 IconButton-text-534"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-511"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`SlideControls component renders a dark themed 1`] = `
<div>
  <div
    class="SlideControls-root-145 SlideControls-light-158"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-172 iconButton IconButton-medium-178 IconButton-text-174 IconButton-textDark-175"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-151"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="SlideControls-middleContainer-150"
    >
      <span
        class="SlideControls-slidingSlot-149"
      >
        <span
          class="SlideControls-numbers-152"
        >
          <span
            class="SlideControls-number-157 SlideControls-active-156"
          >
            01
          </span>
        </span>
      </span>
      <span
        class="SlideControls-total-155"
      >
        05
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-172 iconButton IconButton-medium-178 IconButton-text-174 IconButton-textDark-175"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-151"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`SlideControls component renders correctly 1`] = `
<div>
  <div
    class="SlideControls-root-1"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-28 iconButton IconButton-medium-34 IconButton-text-30"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-7"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="SlideControls-middleContainer-6"
    >
      <span
        class="SlideControls-slidingSlot-5"
      >
        <span
          class="SlideControls-numbers-8"
        >
          <span
            class="SlideControls-number-13 SlideControls-active-12"
          >
            01
          </span>
        </span>
      </span>
      <span
        class="SlideControls-total-11"
      >
        05
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-28 iconButton IconButton-medium-34 IconButton-text-30"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-7"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`SlideControls component renders full size 1`] = `
<div>
  <div
    class="SlideControls-root-109 SlideControls-vertical-111"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-136 iconButton IconButton-medium-142 IconButton-text-138"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-115"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="SlideControls-middleContainer-114"
    >
      <span
        class="SlideControls-slidingSlot-113"
      >
        <span
          class="SlideControls-numbers-116"
        >
          <span
            class="SlideControls-number-121 SlideControls-active-120"
          >
            01
          </span>
        </span>
      </span>
      <span
        class="SlideControls-total-119"
      >
        05
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-136 iconButton IconButton-medium-142 IconButton-text-138"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-115"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`SlideControls component renders the total number when current is more than total 1`] = `
<div>
  <div
    class="SlideControls-root-37"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-64 iconButton IconButton-medium-70 IconButton-text-66"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-43"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="SlideControls-middleContainer-42"
    >
      <span
        class="SlideControls-slidingSlot-41"
      >
        <span
          class="SlideControls-numbers-44"
        >
          <span
            class="SlideControls-number-49 SlideControls-active-48"
          >
            05
          </span>
        </span>
      </span>
      <span
        class="SlideControls-total-47"
      >
        05
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-64 iconButton IconButton-medium-70 IconButton-text-66"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-43"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`SlideControls component renders vertically 1`] = `
<div>
  <div
    class="SlideControls-root-73 SlideControls-vertical-75"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-100 iconButton IconButton-medium-106 IconButton-text-102"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-79"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="SlideControls-middleContainer-78"
    >
      <span
        class="SlideControls-slidingSlot-77"
      >
        <span
          class="SlideControls-numbers-80"
        >
          <span
            class="SlideControls-number-85 SlideControls-active-84"
          >
            01
          </span>
        </span>
      </span>
      <span
        class="SlideControls-total-83"
      >
        05
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-100 iconButton IconButton-medium-106 IconButton-text-102"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-79"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
